Support Java17 to Java26: Security Manager
* https://bugs.openjdk.org/browse/JDK-8264713
* https://github.com/apache/netbeans/issues/8395
* https://ionutbalosin.com/2026/01/the-end-of-javas-security-manager-migration-guide-for-java-24/